agentl/parser.py
"""Parseur à descente récursive d'AGENT-L (voir docs/agentl.ebnf)."""
from __future__ import annotations

from typing import Any, Dict, List, Optional

from .core import ParseError, Symbol
from .state import EPISTEMIC_FUNCS
from .lexer import PHASES, Token, tokenize
from .nodes import (
    Agent, AskStmt, BeliefDecl, BinOp, CallExpr, CallStmt, ControlStmt, Decide,
    DelegateStmt, Effect, EventHandler, EvidenceItem, Goal, Hypothesis, IfStmt,
    Domain, ForEachStmt, ListExpr, Literal, LoopSpec, LoopStmt, MemoryWrite, MemorySpec,
    MessageHandler, MessageStmt, Observer,
    JudgeStmt, Node, PathExpr, Plan, PlannerSpec, PolicyRule, Program, Question,
    ReasonStmt, Redaction,
    SetStmt,
    Outcome, Scenario, ScenarioStimulus, ScenarioAssertion, Step, Stmt, ThenPlan, ToolDecl, UnOp, UtilityTerm,
    VerifyStmt,
)

COMPARISONS = {"==", "!=", ">", ">=", "<", "<="}


class Parser:
    def __init__(self, tokens: List[Token], filename: str = "<source>"):
        self.toks = tokens
        self.i = 0
        self.filename = filename

    # ---------------------------------------------------------------- utils
    @property
    def cur(self) -> Token:
        # Le flux se termine toujours par un jeton EOF ; on s'y « colle » plutôt
        # que de déborder (un IndexError serait un traceback nu, pas une erreur
        # de syntaxe propre).
        if self.i < len(self.toks):
            return self.toks[self.i]
        return self.toks[-1]

    def peek(self, offset: int = 1) -> Token:
        j = self.i + offset
        if 0 <= j < len(self.toks):
            return self.toks[j]
        return self.toks[-1]

    def at(self, kind: str, value: Any = None) -> bool:
        t = self.cur
        return t.kind == kind and (value is None or t.value == value)

    def at_kw(self, *words: str) -> bool:
        return self.cur.kind == "KW" and self.cur.value in words

    def advance(self) -> Token:
        t = self.cur
        if t.kind != "EOF":
            self.i += 1
        return t

    def accept(self, kind: str, value: Any = None) -> Optional[Token]:
        if self.at(kind, value):
            return self.advance()
        return None

    def accept_kw(self, *words: str) -> Optional[Token]:
        if self.at_kw(*words):
            return self.advance()
        return None

    def expect(self, kind: str, value: Any = None) -> Token:
        if not self.at(kind, value):
            got = self.cur
            want = f"{kind} {value!r}" if value is not None else kind
            raise ParseError(
                f"{self.filename}:{got.line}: attendu {want}, obtenu "
                f"{got.kind} {got.value!r}"
            )
        return self.advance()

    def expect_kw(self, word: str) -> Token:
        return self.expect("KW", word)

    def name(self) -> str:
        """Un nom : identifiant ou mot-clé réutilisé comme champ."""
        t = self.cur
        if t.kind in ("IDENT", "KW"):
            self.advance()
            return str(t.value)
        if t.kind in ("NUM", "STR"):
            self.advance()
            return str(t.value)
        raise ParseError(f"{self.filename}:{t.line}: nom attendu, obtenu {t.value!r}")

    def opt_sep(self) -> None:
        """`:` ou `=` optionnels après une étiquette de champ."""
        if self.at("OP", ":") or self.at("OP", "="):
            self.advance()

    def opt_comma(self) -> None:
        self.accept("OP", ",")

    def _number(self, what: str = "nombre") -> float:
        """Lit un jeton numérique (NUM / PCT / DUR) ou lève une erreur propre.

        Sans ce garde-fou, un champ numérique alimenté par un identifiant
        (`CONFIDENCE high`) déclencherait un `ValueError` de `float()` — un
        traceback nu, inacceptable pour un produit audité.
        """
        t = self.cur
        if t.kind in ("NUM", "PCT", "DUR"):
            self.advance()
            return float(t.value)
        raise ParseError(
            f"{self.filename}:{t.line}: {what} attendu, obtenu "
            f"{t.kind} {t.value!r}"
        )

    # ----------------------------------------------------------- expressions
    def expression(self) -> Any:
        return self.or_expr()

    def or_expr(self):
        node = self.and_expr()
        while self.at_kw("OR"):
            line = self.advance().line
            node = BinOp("OR", node, self.and_expr(), line=line)
        return node

    def and_expr(self):
        node = self.not_expr()
        while self.at_kw("AND"):
            line = self.advance().line
            node = BinOp("AND", node, self.not_expr(), line=line)
        return node

    def not_expr(self):
        if self.at_kw("NOT"):
            line = self.advance().line
            return UnOp("NOT", self.not_expr(), line=line)
        return self.comparison()

    def comparison(self):
        node = self.additive()
        if self.cur.kind == "OP" and self.cur.value in COMPARISONS:
            op = self.advance()
            return BinOp(op.value, node, self.additive(), line=op.line)
        if self.at_kw("IN"):
            line = self.advance().line
            return BinOp("IN", node, self.additive(), line=line)
        return node

    def additive(self):
        node = self.multiplicative()
        while self.cur.kind == "OP" and self.cur.value in ("+", "-"):
            op = self.advance()
            node = BinOp(op.value, node, self.multiplicative(), line=op.line)
        return node

    def multiplicative(self):
        node = self.unary()
        while self.cur.kind == "OP" and self.cur.value in ("*", "/"):
            # `*` isolé sert de joker de politique : ne pas le consommer ici
            if self.cur.value == "*" and self.toks[self.i + 1].kind in ("OP",) \
                    and self.toks[self.i + 1].value in ("}", ")"):
                break
            op = self.advance()
            node = BinOp(op.value, node, self.unary(), line=op.line)
        return node

    def unary(self):
        if self.at("OP", "-"):
            line = self.advance().line
            return UnOp("-", self.unary(), line=line)
        return self.primary()

    def primary(self):
        t = self.cur
        if t.kind in ("NUM", "PCT", "DUR", "STR", "DATETIME"):
            self.advance()
            return Literal(t.value, line=t.line)
        if self.at("OP", "("):
            self.advance()
            node = self.expression()
            self.expect("OP", ")")
            return node
        if self.at("OP", "["):
            self.advance()
            items = []
            while not self.at("OP", "]"):
                items.append(self.expression())
                self.opt_comma()
            self.expect("OP", "]")
            return ListExpr(items, line=t.line)
        if t.kind == "KW" and t.value in EPISTEMIC_FUNCS \
                and self.toks[self.i + 1].value == "(":
            self.advance()                    # CONFIDENCE(...) : mot réservé
            return self.call_tail(str(t.value), t.line)
        # `SHARED.<clé>` en position d'expression (v1.6). Le compartiment
        # partagé s'écrivait (`INTO SHARED.k`) sans pouvoir se lire : aucune
        # garde ne pouvait en dépendre, donc aucune décision non plus. Ouvrir
        # le mot réservé comme racine de chemin est ce qui rend le partage
        # réel — et ce qui donne à T8 sa seconde moitié.
        if t.kind == "KW" and t.value == "SHARED" \
                and self.toks[self.i + 1].value == ".":
            return PathExpr(self.bucket_path(), line=t.line)
        if t.kind == "IDENT":
            path = self.path_parts()
            if self.at("OP", "("):
                return self.call_tail(path[-1] if len(path) == 1 else ".".join(path), t.line)
            return PathExpr(path, line=t.line)
        raise ParseError(
            f"{self.filename}:{t.line}: expression attendue, obtenu {t.kind} {t.value!r}"
        )

    def bucket_path(self) -> List[str]:
        """Chemin dont le premier segment peut être un mot réservé.

        `INTO SHARED.blocked_hosts`, `PRIOR FROM LONG_TERM.incidents` : les
        noms de compartiments sont des mots-clés du langage.
        """
        parts = [self.name()]
        while self.at("OP", "."):
            self.advance()
            parts.append(self.name())
        return parts

    def path_parts(self) -> List[str]:
        parts = [str(self.expect("IDENT").value)]
        while self.at("OP", "."):
            self.advance()
            parts.append(self.name())
        return parts

    def call_tail(self, name: str, line: int) -> CallExpr:
        self.expect("OP", "(")
        args: List[Any] = []
        kwargs: Dict[str, Any] = {}
        while not self.at("OP", ")"):
            # forme nommée : ident ':' expr  ou  ident '=' expr
            if self.cur.kind == "IDENT" and self.toks[self.i + 1].kind == "OP" \
                    and self.toks[self.i + 1].value in (":", "="):
                key = str(self.advance().value)
                self.advance()
                if key in kwargs:
                    raise ParseError(
                        f"{self.filename}:{line}: argument nommé dupliqué : {key}")
                kwargs[key] = self.expression()
            else:
                args.append(self.expression())
            self.opt_comma()
        self.expect("OP", ")")
        return CallExpr(name, args, kwargs, line=line)

    # ----------------------------------------------------------- instructions
    def block(self) -> List[Stmt]:
        self.expect("OP", "{")
        body = self.stmt_list_until_brace()
        self.expect("OP", "}")
        return body

    def stmt_list_until_brace(self) -> List[Stmt]:
        body: List[Stmt] = []
        while not self.at("OP", "}") and not self.at("EOF"):
            body.append(self.statement())
            self.opt_comma()
        return body

    def statement(self) -> Stmt:
        t = self.cur

        # Un mot-clé de phase utilisé nu dans un LOOP : `OBSERVE`, `VERIFY`...
        if t.kind == "KW" and t.value in PHASES and not self._starts_construct(t):
            self.advance()
            return ControlStmt("PHASE", t.value, line=t.line)

        if t.kind == "KW":
            kw = t.value
            if kw == "SET":
                self.advance()
                target = ".".join(self.path_parts())
                self.opt_sep()
                return SetStmt(target, self.expression(), line=t.line)
            if kw == "IF":
                return self.if_stmt()
            if kw == "VERIFY":
                return self.verify_stmt()
            if kw == "REASON":
                return self.reason_stmt()
            if kw == "JUDGE":
                return self.judge_stmt()
            if kw == "ASK":
                return self.ask_stmt()
            if kw == "DELEGATE":
                return self.delegate_stmt()
            if kw == "MESSAGE":
                return self.message_stmt()
            if kw == "LOOP":
                return self.loop_stmt()
            if kw == "FOREACH":
                return self.foreach_stmt()
            if kw == "RETRY":
                self.advance()
                n = 1
                if self.at("NUM"):
                    n = int(self.advance().value)
                return ControlStmt("RETRY", n, line=t.line)
            if kw in ("ROLLBACK", "ESCALATE"):
                self.advance()
                return ControlStmt(kw, line=t.line)
            if kw == "THEN":
                self.advance()
                return self.then_target()
            if kw in PHASES:
                self.advance()
                return ControlStmt("PHASE", kw, line=t.line)

        if t.kind == "IDENT":
            path = self.path_parts()
            if self.at("OP", "("):
                call = self.call_tail(path[-1] if len(path) == 1 else ".".join(path), t.line)
                return CallStmt(call, line=t.line)
            if self.at("OP", "="):
                self.advance()
                return SetStmt(".".join(path), self.expression(), line=t.line)
            # nom nu = déclenchement d'un plan
            return ThenPlan(".".join(path), line=t.line)

        raise ParseError(
            f"{self.filename}:{t.line}: instruction attendue, obtenu {t.kind} {t.value!r}"
        )

    def _starts_construct(self, tok: Token) -> bool:
        """Le mot-clé introduit-il une vraie instruction plutôt qu'une phase ?"""
        nxt = self.toks[self.i + 1]
        if tok.value == "VERIFY":
            return (nxt.kind in ("STR", "IDENT", "NUM", "PCT", "DUR")
                    or (nxt.kind == "OP" and nxt.value in ("{", "(")))
        return False

    def then_target(self) -> Stmt:
        """Cible d'un THEN : bloc, appel d'outil, ou nom de plan."""
        if self.at("OP", "{"):
            body = self.block()
            return IfStmt(Literal(True), body, line=self.cur.line)
        return self.statement()

    def if_stmt(self) -> IfStmt:
        line = self.expect_kw("IF").line
        cond = self.expression()
        self.expect_kw("THEN")
        then_stmt = self.then_target()
        then_body = then_stmt.then if isinstance(then_stmt, IfStmt) and \
            isinstance(then_stmt.cond, Literal) and then_stmt.cond.value is True \
            else [then_stmt]
        otherwise: List[Stmt] = []
        if self.at_kw("ELSE"):
            self.advance()
            else_stmt = self.then_target()
            otherwise = else_stmt.then if isinstance(else_stmt, IfStmt) and \
                isinstance(else_stmt.cond, Literal) and else_stmt.cond.value is True \
                else [else_stmt]
        return IfStmt(cond, then_body, otherwise, line=line)

    def verify_stmt(self) -> VerifyStmt:
        line = self.expect_kw("VERIFY").line
        label = None
        if self.cur.kind == "STR":
            label = str(self.advance().value)
        if not self.at("OP", "{"):
            return VerifyStmt(self.expression(), label=label, line=line)
        self.expect("OP", "{")
        if self.at_kw("CONDITION"):
            self.advance()
            self.opt_sep()
        cond = self.expression()
        on_fail: List[Stmt] = []
        if self.at_kw("ON"):
            self.advance()
            self.expect_kw("FAIL")
            self.opt_sep()
            on_fail = self.block() if self.at("OP", "{") else [self.statement()]
        self.expect("OP", "}")
        return VerifyStmt(cond, on_fail, label, line=line)

    def reason_stmt(self) -> ReasonStmt:
        line = self.expect_kw("REASON").line
        task = ""
        using: List[str] = []
        produce: Dict[str, str] = {}
        domains: Dict[str, Domain] = {}
        defaults: Dict[str, Node] = {}
        if self.cur.kind == "STR":
            task = str(self.advance().value)
        self.expect("OP", "{")
        while not self.at("OP", "}"):
            if self.at_kw("TASK"):
                self.advance()
                self.opt_sep()
                task = str(self.expect("STR").value)
            elif self.at_kw("USING"):
                self.advance()
                self.opt_sep()
                using = self.name_list()
            elif self.at_kw("PRODUCE"):
                self.advance()
                self.opt_sep()
                produce, domains, defaults = self.typed_fields_domained()
            else:
                raise ParseError(
                    f"{self.filename}:{self.cur.line}: champ REASON inconnu "
                    f"{self.cur.value!r}"
                )
            self.opt_comma()
        self.expect("OP", "}")
        return ReasonStmt(task, using, produce, domains, defaults, line=line)

    # ------------------------------------------------------------- JUDGE
    def judge_stmt(self) -> JudgeStmt:
        """`JUDGE [<étiquette>] { USING {…} <champ>: NOUL|CHOICE|SCORE … }`

        Le parseur dérive `produce`, `domains` et `defaults` des questions :
        un `JUDGE` **est** un `REASON` dont les champs sont clos, et tout ce
        qui borne déjà une sortie de modèle (domaines, DEFAULT, W115, W134,
        provenance `LLM`) s'applique sans être réécrit.
        """
        line = self.expect_kw("JUDGE").line
        task = ""
        using: List[str] = []
        questions: Dict[str, Question] = {}
        defaults: Dict[str, Node] = {}
        if self.cur.kind == "STR":
            task = str(self.advance().value)
        self.expect("OP", "{")
        while not self.at("OP", "}"):
            if self.at_kw("USING"):
                self.advance()
                self.opt_sep()
                using = self.name_list()
            elif self.at_kw("TASK"):
                self.advance()
                self.opt_sep()
                task = str(self.expect("STR").value)
            else:
                question, default = self.judge_question()
                if question.name in questions:
                    raise ParseError(
                        f"{self.filename}:{question.line}: champ JUDGE en "
                        f"double : {question.name}")
                questions[question.name] = question
                if default is not None:
                    defaults[question.name] = default
            self.opt_comma()
        self.expect("OP", "}")
        produce: Dict[str, str] = {}
        domains: Dict[str, Domain] = {}
        for name, question in questions.items():
            produce[name] = question.type_name()
            domain = question.domain()
            if domain is not None:
                domains[name] = domain
        return JudgeStmt(task, using, produce, domains, defaults,
                         questions=questions, line=line)

    def judge_question(self) -> tuple:
        """`<champ>: NOUL "…"`, `CHOICE "…" { v: "…" }`, `SCORE "…" [ … ]`."""
        line = self.cur.line
        name = self.name()
        self.opt_sep()
        kind_token = self.cur
        if not self.at_kw("NOUL", "CHOICE", "SCORE"):
            raise ParseError(
                f"{self.filename}:{kind_token.line}: JUDGE attend NOUL, "
                f"CHOICE ou SCORE pour `{name}`, obtenu "
                f"{kind_token.value!r}")
        kind = str(self.advance().value)
        # La consigne est **obligatoire** : c'est tout l'objet de `JUDGE`.
        # Un nom de champ n'est pas une question — les bancs montrent qu'un
        # oracle lit `holds_negative` comme « concerne le négatif ».
        if self.cur.kind != "STR":
            raise ParseError(
                f"{self.filename}:{self.cur.line}: `{name}: {kind}` attend la "
                f"question entre guillemets")
        instructions = str(self.advance().value)
        question = Question(name, kind, instructions, line=line)
        if kind == "CHOICE":
            self.expect("OP", "{")
            while not self.at("OP", "}"):
                option = self.name()
                self.opt_sep()
                if self.cur.kind != "STR":
                    raise ParseError(
                        f"{self.filename}:{self.cur.line}: l'option "
                        f"`{option}` de `{name}` attend sa description entre "
                        f"guillemets")
                question.criteria[option] = str(self.advance().value)
                self.opt_comma()
            self.expect("OP", "}")
        elif kind == "SCORE":
            self.expect("OP", "[")
            while not self.at("OP", "]"):
                if self.cur.kind != "STR":
                    raise ParseError(
                        f"{self.filename}:{self.cur.line}: les niveaux de "
                        f"`{name}` sont des descriptions entre guillemets")
                question.levels.append(str(self.advance().value))
                self.opt_comma()
            self.expect("OP", "]")
        default: Optional[Node] = None
        while self.at_kw("ABSTAIN", "DEFAULT"):
            if self.accept_kw("ABSTAIN"):
                self.expect_kw("BELOW")
                self.opt_sep()
                question.abstain_below = self._number("seuil d'abstention")
            else:
                self.advance()
                self.opt_sep()
                default = self.expression()
        return question, default

    def ask_stmt(self) -> AskStmt:
        line = self.expect_kw("ASK").line
        addressee = self.name()
        node = AskStmt(addressee, line=line)
        self.expect("OP", "{")
        while not self.at("OP", "}"):
            if self.at_kw("QUESTION"):
                self.advance(); self.opt_sep()
                node.question = str(self.expect("STR").value)
            elif self.at_kw("REASON"):
                self.advance(); self.opt_sep()
                node.reason = str(self.advance().value)
            elif self.at_kw("TIMEOUT"):
                self.advance(); self.opt_sep()
                node.timeout = self._number("durée")
            elif self.at_kw("DEFAULT"):
                self.advance(); self.opt_sep()
                node.default = self.expression()
            else:
                raise ParseError(
                    f"{self.filename}:{self.cur.line}: champ ASK inconnu {self.cur.value!r}"
                )
            self.opt_comma()
        self.expect("OP", "}")
        return node
